# telegram-cleaner

./: .gitignore  .pylintrc  README.md  pyproject.toml
.github/workflows/: poetry-publish.yml
telegram_cleaner/: cleaner.py  cli.py  color_handler.py  utils.py
