[tool.poetry]
name = "telegram-cleaner"
version = "0.1.0"
description = ""
authors = ["Senior YAML Developer <yamldeveloper@proton.me>"]
readme = "README.md"
packages = [{include = "telegram_cleaner"}]

[tool.poetry.dependencies]
python = "^3.10"
pyrogram = "^2.0.99"
tgcrypto = "^1.2.5"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
ipykernel = "^6.21.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
tg-clean = "telegram_cleaner.cli:main"
